added workspace-service for online storage of workspace

--- a/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
+++ b/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
@@ -128,6 +128,7 @@ Name {{ active_slug }}
     '@CorujaPlesyndBundle/Resources/public/js/lib/angular/angular-resource.js'
     '@CorujaPlesyndBundle/Resources/public/js/app.js'
     '@CorujaPlesyndBundle/Resources/public/js/controllers.js'
+    '@CorujaPlesyndBundle/Resources/public/js/services/workspace-service.js'
     '@CorujaPlesyndBundle/Resources/public/js/services/coruja-online-status.js'
     '@CorujaPlesyndBundle/Resources/public/js/services/coruja-storage.js'
     '@CorujaPlesyndBundle/Resources/public/js/services/coruja-resource.js'
