removed appcache for testing purposes

--- a/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
+++ b/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="plesynd" ng-controller="PlesyndCtrl" manifest="/cache.appcache">
+<html lang="en" ng-app="plesynd" ng-controller="PlesyndCtrl" smanifest="/cache.appcache">
 <head>
     <meta charset="utf-8">
     {% raw %}<title>PleSynd {{online_status_string}}</title>{% endraw %}
