--- a/src/Coruja/TodoBundle/Resources/views/Todo/index.html.twig
+++ b/src/Coruja/TodoBundle/Resources/views/Todo/index.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="todoApp" manifest="/todo/cache.appcache">
+<html lang="en" ng-app="todoApp" gmanifest="/todo/cache.appcache">
 <head>
     <meta charset="utf-8">
     <title>Todo</title>
