--- a/src/Coruja/PlesyndBundle/Resources/public/css/app.css
+++ b/src/Coruja/PlesyndBundle/Resources/public/css/app.css
@@ -2,3 +2,15 @@ body {
     padding-top: 60px;
     padding-bottom: 40px;
 }
+
+.edit-workspace {
+    margin-top: 10px;
+}
+
+.widget {
+    margin-right: 10px;
+}
+
+.choose-widget {
+    margin-bottom: 10px;
+}
