iframe html is created in controller method and bound via bind-html-unsafe directive to have the name resolved correctly

--- a/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
+++ b/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
@@ -179,7 +179,8 @@
                 </div>
             </div>
             <hr>
-            <iframe  ng-src="{{widget.instance.url}}" width={{widget.instance.width}} height={{widget.instance.height}}></iframe>
+            <div ng-bind-html-unsafe="renderWidgetIframe(widget)"></div>
+            <!--<iframe  ng-src="{{widget.instance.url}}" width={{widget.instance.width}} height={{widget.instance.height}}></iframe>-->
         </div>
     </div>
     </div>
