--- a/src/Coruja/TodoBundle/Resources/views/Todo/index.html.twig
+++ b/src/Coruja/TodoBundle/Resources/views/Todo/index.html.twig
@@ -14,6 +14,12 @@
 
 {% raw %}
 
+<div ng-controller="TestCtrl">
+    <button ng-click="test()">Test1</button>
+    <button ng-click="test2()">Test2</button>
+</div>
+
+
 <section id="todoapp" ng-controller="TodoCtrl">
     <header id="header">
         <h1>todos {{online_status_string}}</h1>
@@ -59,19 +65,23 @@
 {% endraw %}
 
 {% javascripts
+    '@CorujaTodoBundle/Resources/public/js/lib/jquery-1.8.1.js'
     '@CorujaTodoBundle/Resources/public/js/lib/angular/angular.js'
     '@CorujaTodoBundle/Resources/public/js/lib/angular/angular-resource.js'
+    '@CorujaTodoBundle/Resources/public/js/lib/postmessage.js'
     '@CorujaTodoBundle/Resources/public/js/app.js'
     '@CorujaTodoBundle/Resources/public/js/controllers.js'
     '@CorujaTodoBundle/Resources/public/js/directives/todoBlur.js'
     '@CorujaTodoBundle/Resources/public/js/directives/todoFocus.js'
     '@CorujaTodoBundle/Resources/public/js/services/coruja-online-status.js'
+    '@CorujaTodoBundle/Resources/public/js/services/coruja-frame-messenger.js'
     '@CorujaTodoBundle/Resources/public/js/services/coruja-storage.js'
     '@CorujaTodoBundle/Resources/public/js/services/coruja-resource.js'
     '@CorujaTodoBundle/Resources/public/js/services/todo-service.js'
     output='js/compiled/todo/main.js'
 %}
 <script src="{{ asset_url }}"></script>
-{% endjavascripts %}
 
+{% endjavascripts %}
+</body>
 </html>
