--- a/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
+++ b/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
@@ -58,6 +58,10 @@
             -->
             <a class="brand" href="#">Plesynd</a>
             <div class="nav-collapse collapse">
+                <p class="navbar-text pull-right">
+                    <span ng-show="is_authenticated">logged in as {{ active_username }}</span>
+                    <span ng-show="!is_authenticated">not logged in</span>
+                </p>
                 <ul class="nav">
                     <li>
                         <a>
@@ -65,13 +69,27 @@
                             <span ng-show="!online_status" class="label label-important">Offline</span>
                         </a>
                     </li>
+                    <li ng-show="is_authenticated"><a class="navbar-link" ng-click="logout()">Logout</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
     </div>
 </div>
 
-<div class="container-fluid">
+<div class="auth waiting-for-angular">
+<div id="login-holder" class="container">
+    <div id="loginbox" class="hero-unit">
+        <div id="login-inner" class="well">
+            <form ng-submit="login()" class="form-inline">
+                <input type="text" ng-model="username" placeholder="Username"/>
+                <input type="password" ng-model="password" placeholder="Password"/>
+                <button type="submit" class="btn btn-primary">Login</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div id="content" class="container-fluid">
     <div class="row-fluid">
         <div class="span12">
             <div class="progress" ng-class="active" ng-cloak>
@@ -143,7 +161,7 @@
     </footer>
 
 </div><!--/.fluid-container-->
-
+          </div>
 
 <!-- Container that holds dashboard -->
 <script type="text/ng-template" id="dashboard">
@@ -241,6 +259,7 @@
     '@CorujaPlesyndBundle/Resources/public/js/lib/jquery-1.8.1.js'
     '@CorujaPlesyndBundle/Resources/public/js/lib/angular/angular.js'
     '@CorujaPlesyndBundle/Resources/public/js/lib/angular/angular-resource.js'
+    '@CorujaPlesyndBundle/Resources/public/js/lib/http-auth-interceptor.js'
     '@CorujaPlesyndBundle/Resources/public/js/lib/postmessage.js'
     '@CorujaPlesyndBundle/Resources/public/js/app.js'
     '@CorujaPlesyndBundle/Resources/public/js/controllers/plesynd-controller.js'
