--- a/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
+++ b/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
@@ -16,6 +16,15 @@
     <link rel="stylesheet" href="{{ asset_url }}"/>
     {% endstylesheets %}
 
+    <style type="text/css">
+        .form input.ng-invalid.ng-dirty, .form input.ng-invalid.ng-invalid-server {
+            background-color: #FA787E;
+        }
+        .form input.ng-valid.ng-dirty {
+            background-color: #78FA89;
+        }
+    </style>
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -70,98 +79,124 @@
                         </a>
                     </li>
                     <li ng-show="is_authenticated"><a class="navbar-link" ng-click="logout()">Logout</a></li>
+                    <li><a class="navbar-link" ng-click="register()">Register</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
-        </div>
+        </div><!--/.container-fluid -->
     </div>
 </div>
 
 <div class="auth waiting-for-angular">
-<div id="login-holder" class="container">
-    <div id="loginbox" class="hero-unit">
-        <div id="login-inner" class="well">
-            <form ng-submit="login()" class="form-inline">
-                <input type="text" ng-model="username" placeholder="Username"/>
-                <input type="password" ng-model="password" placeholder="Password"/>
-                <button type="submit" class="btn btn-primary">Login</button>
-            </form>
-        </div>
-    </div>
-</div>
-
-<div id="content" class="container-fluid">
-    <div class="row-fluid">
-        <div class="span12">
-            <div class="progress" ng-class="active" ng-cloak>
-                <div class="bar" style="width: 100%;"></div>
+    <div id="login-holder" class="container">
+        <div class="hero-unit">
+            <div class="well">
+                <form ng-submit="login()" class="form-inline">
+                    <input type="text" ng-model="username" placeholder="Username"/>
+                    <input type="password" ng-model="password" placeholder="Password"/>
+                    <button type="submit" class="btn btn-primary">Login</button>
+                </form>
             </div>
-        </div><!--/span-->
-    </div><!--/row-->
-    <div class="row-fluid">
-        <div class="span12">
-            <ul class="nav nav-tabs">
-                <li ng-class="{active: checkActiveTab('dashboard')}"><a href="#/dashboard">Dashboard</a></li>
-                <li ng-class="{active: checkActiveTab(workspace.id)}" ng-repeat="workspace in workspaces" >
-                    <a href="#/workspace/{{workspace.id}}">
-                        {{workspace.title}}
-                        <span ng-show="checkActiveTab(workspace.id)" ng-click="changeShowEdit()"> | e</span>
-                    </a>
-                </li>
-                <li><a ng-click="addWorkspace()">Add</a></li>
-            </ul>
-        </div><!--/span-->
-    </div><!--/row-->
-    <div class="row-fluid">
-        <div class="span12">
-            <div ng-view></div>
-        </div><!--/span-->
-    </div><!--/row-->
-
-    <div class="row-fluid">
-        <div class="span12">
-            <div ng-repeat="widget in widgets">
-                <div ng-show="isWidgetVisible(widget)" class="widget well pull-left" style="width: {{ widget.instance.width }}px;height:({{ widget.instance.height }}+80)px;">
-                    <div class="navbar">
-                        <div class="navbar-inner">
-                            <div class="container-fluid">
-                                <a class="brand" href="#">{{ widget.title }}</a>
-                                <ul ng-show="widget.is_offline_compatible" class="nav">
-                                    <li>
-                                        <a>
-                                            <span ng-show="online_status" class="label label-success">Online</span>
-                                            <span ng-show="!online_status" class="label label-important">Offline</span>
-                                        </a>
-                                    </li>
-                                    <li><a><span class="label label-info">Available {{ widget.data.available.length }}</span></a></li>
-                                    <li>
-                                        <a>
-                                            <span class="label " ng-class="{'label-success':widget.data.number_not_synchronized == 0, 'label-warning':widget.data.number_not_synchronized > 0}">
-                                                Sync {{ widget.data.number_not_synchronized }}
-                                            </span>
-                                        </a>
-                                    </li>
-                                </ul>
-                                <ul class="nav pull-right">
-                                    <li><a ng-click="deleteWidget(widget)"><span class="label label-important">x</span></a></li>
-                                </ul>
-                            </div>
+        </div>
+        <div class="hero-unit">
+            <div class="well">
+                <form novalidate remote-form method='post' target="user" name="registerForm">
+                    <div class="control-group" ng-class="{error: !registerForm.username.$valid}">
+                        <div class="controls">
+                            <input remote-form-component type="text" name="username" ng-model="user.username" placeholder="Username"/>
+                            <span class="help-inline" ng-show="!registerForm.username.$valid && registerForm.username.$error.server">{{ serverValidationError.username }}</span>
                         </div>
                     </div>
-                    <hr>
-                    <div ng-bind-html-unsafe="renderWidgetIframe(widget)"></div>
-                </div>
+                    <div class="control-group" ng-class="{error: !registerForm.email.$valid}">
+                        <div class="controls">
+                            <input remote-form-component email type="text" name="email" ng-model="user.email" placeholder="Email"/>
+                            <span class="help-inline" ng-show="!registerForm.email.$valid && registerForm.email.$error.server">{{ serverValidationError.email }}</span>
+                        </div>
+                    </div>
+                    <div class="control-group" ng-class="{error: !registerForm.password.$valid}">
+                        <div class="controls">
+                            <input remote-form-component type="text" name="password" ng-model="user.password" placeholder="Password"/>
+                            <span class="help-inline" ng-show="!registerForm.password.$valid && registerForm.password.$error.server">{{ serverValidationError.email }}</span>
+                        </div>
+                    </div>
+                    <button type="submit" ng-click="submit(user)" ng-disabled="registerForm.$pristine" class="btn btn-primary">Register</button>
+                </form>
             </div>
-        </div><!--/span-->
-    </div><!--/row-->
+        </div>
+    </div>
 
-    <hr>
+    <div id="content" class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <div class="progress" ng-class="active" ng-cloak>
+                    <div class="bar" style="width: 100%;"></div>
+                </div>
+            </div><!--/span-->
+        </div><!--/row-->
+        <div class="row-fluid">
+            <div class="span12">
+                <ul class="nav nav-tabs">
+                    <li ng-class="{active: checkActiveTab('dashboard')}"><a href="#/dashboard">Dashboard</a></li>
+                    <li ng-class="{active: checkActiveTab(workspace.id)}" ng-repeat="workspace in workspaces" >
+                        <a href="#/workspace/{{workspace.id}}">
+                            {{workspace.title}}
+                            <span ng-show="checkActiveTab(workspace.id)" ng-click="changeShowEdit()"> | e</span>
+                        </a>
+                    </li>
+                    <li><a ng-click="addWorkspace()">Add</a></li>
+                </ul>
+            </div><!--/span-->
+        </div><!--/row-->
+        <div class="row-fluid">
+            <div class="span12">
+                <div ng-view></div>
+            </div><!--/span-->
+        </div><!--/row-->
 
-    <footer>
-        <p>&copy; Roman Sachse 2012</p>
-    </footer>
+        <div class="row-fluid">
+            <div class="span12">
+                <div ng-repeat="widget in widgets">
+                    <div ng-show="isWidgetVisible(widget)" class="widget well pull-left" style="width: {{ widget.instance.width }}px;height:({{ widget.instance.height }}+80)px;">
+                        <div class="navbar">
+                            <div class="navbar-inner">
+                                <div class="container-fluid">
+                                    <a class="brand" href="#">{{ widget.title }}</a>
+                                    <ul ng-show="widget.is_offline_compatible" class="nav">
+                                        <li>
+                                            <a>
+                                                <span ng-show="online_status" class="label label-success">Online</span>
+                                                <span ng-show="!online_status" class="label label-important">Offline</span>
+                                            </a>
+                                        </li>
+                                        <li><a><span class="label label-info">Available {{ widget.data.available.length }}</span></a></li>
+                                        <li>
+                                            <a>
+                                                <span class="label " ng-class="{'label-success':widget.data.number_not_synchronized == 0, 'label-warning':widget.data.number_not_synchronized > 0}">
+                                                    Sync {{ widget.data.number_not_synchronized }}
+                                                </span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                    <ul class="nav pull-right">
+                                        <li><a ng-click="deleteWidget(widget)"><span class="label label-important">x</span></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div ng-bind-html-unsafe="renderWidgetIframe(widget)"></div>
+                    </div>
+                </div>
+            </div><!--/span-->
+        </div><!--/row-->
 
+        <hr>
+
+        <footer>
+            <p>&copy; Roman Sachse 2012</p>
+        </footer>
+
+    </div><!--/.fluid-container-->
 </div><!--/.fluid-container-->
-          </div>
 
 <!-- Container that holds dashboard -->
 <script type="text/ng-template" id="dashboard">
@@ -265,6 +300,7 @@
     '@CorujaPlesyndBundle/Resources/public/js/controllers/plesynd-controller.js'
     '@CorujaPlesyndBundle/Resources/public/js/controllers/workspace-controller.js'
     '@CorujaPlesyndBundle/Resources/public/js/controllers/dashboard-controller.js'
+    '@CorujaPlesyndBundle/Resources/public/js/directives/coruja-remote-form-directive.js'
     '@CorujaPlesyndBundle/Resources/public/js/services/workspace-service.js'
     '@CorujaPlesyndBundle/Resources/public/js/services/widget-service.js'
     '@CorujaPlesyndBundle/Resources/public/js/services/child-frame-service.js'
