--- a/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
+++ b/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
@@ -58,48 +58,37 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container-fluid">
-            <!-- benötigt bootstrap.js
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
-            -->
             <a class="brand" href="#">Plesynd</a>
-            <div class="nav-collapse collapse">
-                <p class="navbar-text pull-right">
-                    <span ng-show="is_authenticated">logged in as {{ active_username }}</span>
-                    <span ng-show="!is_authenticated">not logged in</span>
-                </p>
-                <ul class="nav">
-                    <li>
-                        <a>
-                            <span ng-show="online_status" class="label label-success">Online</span>
-                            <span ng-show="!online_status" class="label label-important">Offline</span>
-                        </a>
-                    </li>
-                    <li ng-show="is_authenticated"><a class="navbar-link" ng-click="logout()">Logout</a></li>
-                    <li><a class="navbar-link" ng-click="register()">Register</a></li>
-                </ul>
-            </div><!--/.nav-collapse -->
+            <p class="navbar-text pull-right">
+                <span><a class="navbar-link" ng-click="logout()">Logout</a></span>
+            </p>
+            <ul class="nav">
+                <li>
+                    <a>
+                        <span ng-show="online_status" class="label label-success">Online</span>
+                        <span ng-show="!online_status" class="label label-important">Offline</span>
+                    </a>
+                </li>
+            </ul>
         </div><!--/.container-fluid -->
     </div>
 </div>
 
 <div class="auth waiting-for-angular">
-    <div id="login-holder" class="container">
-        <div class="hero-unit">
+    <div id="auth-container" class="container">
+        <div class="hero-unit" id="login">
             <div class="well">
-                <form ng-submit="login()" class="form-inline">
+                <form class="form-inline">
                     <input type="text" ng-model="username" placeholder="Username"/>
                     <input type="password" ng-model="password" placeholder="Password"/>
-                    <button type="submit" class="btn btn-primary">Login</button>
+                    <button type="submit" ng-click="login()" class="btn btn-primary">Login</button>
+                    <button class="btn btn-info" ng-click="changeAuthType('register')">Register</button>
                 </form>
             </div>
         </div>
-        <div class="hero-unit">
+        <div class="hero-unit" id="register">
             <div class="well">
-                <form novalidate remote-form method='post' target="user" name="registerForm">
+                <form novalidate remote-form method='post' target="user" success="changeAuthType" name="registerForm">
                     <div class="control-group" ng-class="{error: !registerForm.username.$valid}">
                         <div class="controls">
                             <input remote-form-component type="text" name="username" ng-model="user.username" placeholder="Username"/>
@@ -114,11 +103,12 @@
                     </div>
                     <div class="control-group" ng-class="{error: !registerForm.password.$valid}">
                         <div class="controls">
-                            <input remote-form-component type="text" name="password" ng-model="user.password" placeholder="Password"/>
+                            <input remote-form-componen type="password" name="password" ng-model="user.password" placeholder="Password"/>
                             <span class="help-inline" ng-show="!registerForm.password.$valid && registerForm.password.$error.server">{{ serverValidationError.email }}</span>
                         </div>
                     </div>
                     <button type="submit" ng-click="submit(user)" ng-disabled="registerForm.$pristine" class="btn btn-primary">Register</button>
+                    <button class="btn btn-info" ng-click="changeAuthType('login')">Go to login</button>
                 </form>
             </div>
         </div>
@@ -196,7 +186,7 @@
         </footer>
 
     </div><!--/.fluid-container-->
-</div><!--/.fluid-container-->
+</div>
 
 <!-- Container that holds dashboard -->
 <script type="text/ng-template" id="dashboard">
@@ -300,6 +290,7 @@
     '@CorujaPlesyndBundle/Resources/public/js/controllers/plesynd-controller.js'
     '@CorujaPlesyndBundle/Resources/public/js/controllers/workspace-controller.js'
     '@CorujaPlesyndBundle/Resources/public/js/controllers/dashboard-controller.js'
+    '@CorujaPlesyndBundle/Resources/public/js/directives/coruja-auth-directive.js'
     '@CorujaPlesyndBundle/Resources/public/js/directives/coruja-remote-form-directive.js'
     '@CorujaPlesyndBundle/Resources/public/js/services/workspace-service.js'
     '@CorujaPlesyndBundle/Resources/public/js/services/widget-service.js'
