delete widgets only in online mode

--- a/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
+++ b/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
@@ -156,7 +156,7 @@
                                         </li>
                                     </ul>
                                     <ul class="nav pull-right">
-                                        <li><a ng-click="deleteWidget(widget)"><span class="label label-important">x</span></a></li>
+                                        <li><a ng-show="online_status" ng-click="deleteWidget(widget)"><span class="label label-important">x</span></a></li>
                                     </ul>
                                 </div>
                             </div>
